test/asm/macro-syntax.err
error: macro-syntax.asm(7):
    Label "old" created outside of a SECTION
error: macro-syntax.asm(7):
    syntax error, unexpected MACRO
error: macro-syntax.asm(8):
    '\1' cannot be used outside of a macro
error: macro-syntax.asm(9):
    syntax error, unexpected ENDM
error: macro-syntax.asm(11):
    "old" is not a macro
Assembly aborted with 5 errors!
